upload/src/main/mc/parser/.antlr/MCParser.py
# Generated from c:\Users\PC\Desktop\Ass3PPL\upload\src\main\mc\parser\MC.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MCParser ( Parser ):

    grammarFileName = "MC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'int'", "'if'", 
                     "'else'", "'void'", "'boolean'", "'float'", "'string'", 
                     "'break'", "'continue'", "'for'", "'return'", "'do'", 
                     "'while'", "'='", "'||'", "'&&'", "'=='", "'!='", "'<'", 
                     "'<='", "'>'", "'>='", "'+'", "'-'", "'/'", "'*'", 
                     "'%'", "'!'", "'('", "')'", "'{'", "'}'", "';'", "','", 
                     "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "COMMENT", "LINECOMMENT", "INT", "IF", 
                      "ELSE", "VOID", "BOOLEAN", "FLOAT", "STRING", "BREAK", 
                      "CONTINUE", "FOR", "RETURN", "DO", "WHILE", "ASSIGN", 
                      "OR", "AND", "EQUAL", "NOTEQUAL", "LESS", "LESSEQUAL", 
                      "GREATER", "GREATEREQUAL", "ADD", "SUB", "DIV", "MUL", 
                      "MOD", "NOT", "LB", "RB", "LP", "RP", "SM", "CM", 
                      "LS", "RS", "INTLIT", "FLOATLIT", "STRINGLIT", "BOOLEANLIT", 
                      "ID", "LITERAL", "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "ERROR_CHAR" ]

    RULE_primitivetype = 0
    RULE_arraypointertype = 1
    RULE_inparameter = 2
    RULE_outparameter = 3
    RULE_program = 4
    RULE_manydecls = 5
    RULE_decl = 6
    RULE_var_decl = 7
    RULE_var = 8
    RULE_func_decl = 9
    RULE_func_type = 10
    RULE_paradecl = 11
    RULE_para = 12
    RULE_block_statement = 13
    RULE_block = 14
    RULE_statement = 15
    RULE_if_statement = 16
    RULE_dowhile_statement = 17
    RULE_for_statement = 18
    RULE_break_statement = 19
    RULE_continue_statement = 20
    RULE_return_statement = 21
    RULE_exp_statement = 22
    RULE_invocation = 23
    RULE_exp = 24
    RULE_exp1 = 25
    RULE_exp2 = 26
    RULE_exp3 = 27
    RULE_exp4 = 28
    RULE_exp5 = 29
    RULE_exp6 = 30
    RULE_exp7 = 31
    RULE_exp8 = 32
    RULE_exp9 = 33
    RULE_operand = 34
    RULE_funcall = 35

    ruleNames =  [ "primitivetype", "arraypointertype", "inparameter", "outparameter", 
                   "program", "manydecls", "decl", "var_decl", "var", "func_decl", 
                   "func_type", "paradecl", "para", "block_statement", "block", 
                   "statement", "if_statement", "dowhile_statement", "for_statement", 
                   "break_statement", "continue_statement", "return_statement", 
                   "exp_statement", "invocation", "exp", "exp1", "exp2", 
                   "exp3", "exp4", "exp5", "exp6", "exp7", "exp8", "exp9", 
                   "operand", "funcall" ]

    EOF = Token.EOF
    COMMENT=1
    LINECOMMENT=2
    INT=3
    IF=4
    ELSE=5
    VOID=6
    BOOLEAN=7
    FLOAT=8
    STRING=9
    BREAK=10
    CONTINUE=11
    FOR=12
    RETURN=13
    DO=14
    WHILE=15
    ASSIGN=16
    OR=17
    AND=18
    EQUAL=19
    NOTEQUAL=20
    LESS=21
    LESSEQUAL=22
    GREATER=23
    GREATEREQUAL=24
    ADD=25
    SUB=26
    DIV=27
    MUL=28
    MOD=29
    NOT=30
    LB=31
    RB=32
    LP=33
    RP=34
    SM=35
    CM=36
    LS=37
    RS=38
    INTLIT=39
    FLOATLIT=40
    STRINGLIT=41
    BOOLEANLIT=42
    ID=43
    LITERAL=44
    WS=45
    UNCLOSE_STRING=46
    ILLEGAL_ESCAPE=47
    ERROR_CHAR=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class PrimitivetypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(MCParser.INT, 0)

        def BOOLEAN(self):
            return self.getToken(MCParser.BOOLEAN, 0)

        def FLOAT(self):
            return self.getToken(MCParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(MCParser.STRING, 0)

        def getRuleIndex(self):
            return MCParser.RULE_primitivetype




    def primitivetype(self):

        localctx = MCParser.PrimitivetypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_primitivetype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.INT) | (1 << MCParser.BOOLEAN) | (1 << MCParser.FLOAT) | (1 << MCParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArraypointertypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def inparameter(self):
            return self.getTypedRuleContext(MCParser.InparameterContext,0)


        def outparameter(self):
            return self.getTypedRuleContext(MCParser.OutparameterContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_arraypointertype




    def arraypointertype(self):

        localctx = MCParser.ArraypointertypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_arraypointertype)
        try:
            self.state = 76
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 74
                self.inparameter()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 75
                self.outparameter()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InparameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitivetype(self):
            return self.getTypedRuleContext(MCParser.PrimitivetypeContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LS(self):
            return self.getToken(MCParser.LS, 0)

        def RS(self):
            return self.getToken(MCParser.RS, 0)

        def getRuleIndex(self):
            return MCParser.RULE_inparameter




    def inparameter(self):

        localctx = MCParser.InparameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_inparameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.primitivetype()
            self.state = 79
            self.match(MCParser.ID)
            self.state = 80
            self.match(MCParser.LS)
            self.state = 81
            self.match(MCParser.RS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OutparameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitivetype(self):
            return self.getTypedRuleContext(MCParser.PrimitivetypeContext,0)


        def LS(self):
            return self.getToken(MCParser.LS, 0)

        def RS(self):
            return self.getToken(MCParser.RS, 0)

        def getRuleIndex(self):
            return MCParser.RULE_outparameter




    def outparameter(self):

        localctx = MCParser.OutparameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_outparameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.primitivetype()
            self.state = 84
            self.match(MCParser.LS)
            self.state = 85
            self.match(MCParser.RS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def manydecls(self):
            return self.getTypedRuleContext(MCParser.ManydeclsContext,0)


        def EOF(self):
            return self.getToken(MCParser.EOF, 0)

        def getRuleIndex(self):
            return MCParser.RULE_program




    def program(self):

        localctx = MCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.manydecls()
            self.state = 88
            self.match(MCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ManydeclsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MCParser.DeclContext,0)


        def manydecls(self):
            return self.getTypedRuleContext(MCParser.ManydeclsContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_manydecls




    def manydecls(self):

        localctx = MCParser.ManydeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_manydecls)
        try:
            self.state = 94
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.decl()
                self.state = 91
                self.manydecls()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(MCParser.Var_declContext,0)


        def func_decl(self):
            return self.getTypedRuleContext(MCParser.Func_declContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_decl




    def decl(self):

        localctx = MCParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_decl)
        try:
            self.state = 98
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.var_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.func_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitivetype(self):
            return self.getTypedRuleContext(MCParser.PrimitivetypeContext,0)


        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.VarContext)
            else:
                return self.getTypedRuleContext(MCParser.VarContext,i)


        def SM(self):
            return self.getToken(MCParser.SM, 0)

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.CM)
            else:
                return self.getToken(MCParser.CM, i)

        def getRuleIndex(self):
            return MCParser.RULE_var_decl




    def var_decl(self):

        localctx = MCParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_var_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.primitivetype()
            self.state = 101
            self.var()
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MCParser.CM:
                self.state = 102
                self.match(MCParser.CM)
                self.state = 103
                self.var()
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 109
            self.match(MCParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def INTLIT(self):
            return self.getToken(MCParser.INTLIT, 0)

        def getRuleIndex(self):
            return MCParser.RULE_var




    def var(self):

        localctx = MCParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_var)
        try:
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.match(MCParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.match(MCParser.ID)
                self.state = 113
                self.match(MCParser.LS)
                self.state = 114
                self.match(MCParser.INTLIT)
                self.state = 115
                self.match(MCParser.RS)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Func_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_type(self):
            return self.getTypedRuleContext(MCParser.Func_typeContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LB(self):
            return self.getToken(MCParser.LB, 0)

        def RB(self):
            return self.getToken(MCParser.RB, 0)

        def block_statement(self):
            return self.getTypedRuleContext(MCParser.Block_statementContext,0)


        def paradecl(self):
            return self.getTypedRuleContext(MCParser.ParadeclContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_func_decl




    def func_decl(self):

        localctx = MCParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_func_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.func_type()
            self.state = 119
            self.match(MCParser.ID)
            self.state = 120
            self.match(MCParser.LB)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.INT) | (1 << MCParser.BOOLEAN) | (1 << MCParser.FLOAT) | (1 << MCParser.STRING))) != 0):
                self.state = 121
                self.paradecl()


            self.state = 124
            self.match(MCParser.RB)
            self.state = 125
            self.block_statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Func_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitivetype(self):
            return self.getTypedRuleContext(MCParser.PrimitivetypeContext,0)


        def VOID(self):
            return self.getToken(MCParser.VOID, 0)

        def outparameter(self):
            return self.getTypedRuleContext(MCParser.OutparameterContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_func_type




    def func_type(self):

        localctx = MCParser.Func_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_func_type)
        try:
            self.state = 130
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.primitivetype()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.match(MCParser.VOID)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 129
                self.outparameter()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParadeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def para(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.ParaContext)
            else:
                return self.getTypedRuleContext(MCParser.ParaContext,i)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.CM)
            else:
                return self.getToken(MCParser.CM, i)

        def getRuleIndex(self):
            return MCParser.RULE_paradecl




    def paradecl(self):

        localctx = MCParser.ParadeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_paradecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.para()
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MCParser.CM:
                self.state = 133
                self.match(MCParser.CM)
                self.state = 134
                self.para()
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitivetype(self):
            return self.getTypedRuleContext(MCParser.PrimitivetypeContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LS(self):
            return self.getToken(MCParser.LS, 0)

        def RS(self):
            return self.getToken(MCParser.RS, 0)

        def getRuleIndex(self):
            return MCParser.RULE_para




    def para(self):

        localctx = MCParser.ParaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_para)
        try:
            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 140
                self.primitivetype()
                self.state = 141
                self.match(MCParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self.primitivetype()
                self.state = 144
                self.match(MCParser.ID)
                self.state = 145
                self.match(MCParser.LS)
                self.state = 146
                self.match(MCParser.RS)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Block_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(MCParser.LP, 0)

        def RP(self):
            return self.getToken(MCParser.RP, 0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.BlockContext)
            else:
                return self.getTypedRuleContext(MCParser.BlockContext,i)


        def getRuleIndex(self):
            return MCParser.RULE_block_statement




    def block_statement(self):

        localctx = MCParser.Block_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_block_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(MCParser.LP)
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.INT) | (1 << MCParser.IF) | (1 << MCParser.BOOLEAN) | (1 << MCParser.FLOAT) | (1 << MCParser.STRING) | (1 << MCParser.BREAK) | (1 << MCParser.CONTINUE) | (1 << MCParser.FOR) | (1 << MCParser.RETURN) | (1 << MCParser.DO) | (1 << MCParser.SUB) | (1 << MCParser.NOT) | (1 << MCParser.LB) | (1 << MCParser.LP) | (1 << MCParser.INTLIT) | (1 << MCParser.FLOATLIT) | (1 << MCParser.STRINGLIT) | (1 << MCParser.BOOLEANLIT) | (1 << MCParser.ID))) != 0):
                self.state = 151
                self.block()
                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 157
            self.match(MCParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(MCParser.StatementContext,0)


        def var_decl(self):
            return self.getTypedRuleContext(MCParser.Var_declContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_block




    def block(self):

        localctx = MCParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_block)
        try:
            self.state = 161
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.IF, MCParser.BREAK, MCParser.CONTINUE, MCParser.FOR, MCParser.RETURN, MCParser.DO, MCParser.SUB, MCParser.NOT, MCParser.LB, MCParser.LP, MCParser.INTLIT, MCParser.FLOATLIT, MCParser.STRINGLIT, MCParser.BOOLEANLIT, MCParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 159
                self.statement()
                pass
            elif token in [MCParser.INT, MCParser.BOOLEAN, MCParser.FLOAT, MCParser.STRING]:
                self.enterOuterAlt(localctx, 2)
                self.state = 160
                self.var_decl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_statement(self):
            return self.getTypedRuleContext(MCParser.If_statementContext,0)


        def dowhile_statement(self):
            return self.getTypedRuleContext(MCParser.Dowhile_statementContext,0)


        def for_statement(self):
            return self.getTypedRuleContext(MCParser.For_statementContext,0)


        def break_statement(self):
            return self.getTypedRuleContext(MCParser.Break_statementContext,0)


        def continue_statement(self):
            return self.getTypedRuleContext(MCParser.Continue_statementContext,0)


        def return_statement(self):
            return self.getTypedRuleContext(MCParser.Return_statementContext,0)


        def exp_statement(self):
            return self.getTypedRuleContext(MCParser.Exp_statementContext,0)


        def block_statement(self):
            return self.getTypedRuleContext(MCParser.Block_statementContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_statement




    def statement(self):

        localctx = MCParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_statement)
        try:
            self.state = 171
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.IF]:
                self.enterOuterAlt(localctx, 1)
                self.state = 163
                self.if_statement()
                pass
            elif token in [MCParser.DO]:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.dowhile_statement()
                pass
            elif token in [MCParser.FOR]:
                self.enterOuterAlt(localctx, 3)
                self.state = 165
                self.for_statement()
                pass
            elif token in [MCParser.BREAK]:
                self.enterOuterAlt(localctx, 4)
                self.state = 166
                self.break_statement()
                pass
            elif token in [MCParser.CONTINUE]:
                self.enterOuterAlt(localctx, 5)
                self.state = 167
                self.continue_statement()
                pass
            elif token in [MCParser.RETURN]:
                self.enterOuterAlt(localctx, 6)
                self.state = 168
                self.return_statement()
                pass
            elif token in [MCParser.SUB, MCParser.NOT, MCParser.LB, MCParser.INTLIT, MCParser.FLOATLIT, MCParser.STRINGLIT, MCParser.BOOLEANLIT, MCParser.ID]:
                self.enterOuterAlt(localctx, 7)
                self.state = 169
                self.exp_statement()
                pass
            elif token in [MCParser.LP]:
                self.enterOuterAlt(localctx, 8)
                self.state = 170
                self.block_statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class If_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(MCParser.IF, 0)

        def LB(self):
            return self.getToken(MCParser.LB, 0)

        def exp(self):
            return self.getTypedRuleContext(MCParser.ExpContext,0)


        def RB(self):
            return self.getToken(MCParser.RB, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.StatementContext)
            else:
                return self.getTypedRuleContext(MCParser.StatementContext,i)


        def ELSE(self):
            return self.getToken(MCParser.ELSE, 0)

        def getRuleIndex(self):
            return MCParser.RULE_if_statement




    def if_statement(self):

        localctx = MCParser.If_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_if_statement)
        try:
            self.state = 187
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 173
                self.match(MCParser.IF)
                self.state = 174
                self.match(MCParser.LB)
                self.state = 175
                self.exp()
                self.state = 176
                self.match(MCParser.RB)
                self.state = 177
                self.statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 179
                self.match(MCParser.IF)
                self.state = 180
                self.match(MCParser.LB)
                self.state = 181
                self.exp()
                self.state = 182
                self.match(MCParser.RB)
                self.state = 183
                self.statement()
                self.state = 184
                self.match(MCParser.ELSE)
                self.state = 185
                self.statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx
